# KittenTTS-FastAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  README.md  config.py  config.yaml  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yml  engine.py  pyproject.toml  requirements-nvidia.txt  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docker-publish.yml  integration-tests.yml  tests.yml
charts/kittentts-fastapi/: Chart.yaml  README.md  values.yaml
src/: config.py  config.yaml  engine.py  models.py  nlp.py  server.py  utils.py
src/kittentts/: __init__.py  get_model.py  onnx_model.py  preprocess.py
src/ui/: index.html  presets.yaml  script.js  styles.css
tests/: test_api_generation.py  test_config_env_profiles.py  test_nlp.py  test_text_options_resolution.py
ui/: presets.yaml  script.js
