[project]
name = "kittentts-fastapi"
version = "0.1.0"
description = "A FastAPI application for the KittenTTS text-to-speech system."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "espeakng-loader>=0.2.4",
    "fastapi>=0.129.0",
    "huggingface-hub>=1.0.0",
    "jinja2>=3.1.6",
    "librosa>=0.11.0",
    "onnxruntime>=1.24.2",
    "phonemizer>=3.3.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.8",
]
nvidia = [
    "onnxruntime-gpu>=1.24.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that run real model/audio generation",
]
